# retrieval-system

./: README.md  main.py  pyproject.toml  requirements.txt  task.json
app/: main.py
app/controllers/: documents_controller.py  home_controller.py  image_proccessing_controller.py  retriieval_controller.py  upload_dokumen_controller.py  users_controller.py
public/uploads/: out_proposal_penelitian_ai.docx
resources/view/: analytic.html  contact.html  document.html  index.html  konversi.html  restorasi.html  retrieval-analytic-result.html  retrieval-analytic.html  upload-dokumen.html
resources/view/layouts/: base.html  footer.html  navbar.html
routers/: api.py  web.py
